Fix bug 314803: fix crash on download failure, caused by DownloadDone() getting called twice. Added error reporting for common downloading errors (no permissions in destination dir, and disk full) via a sheet on the downloads window. Implemented nsIInterfaceRequestor on nsDownloadListener and nsHeaderSniffer because I was seeing assertions about this, and to avoid possible uninitialized value usage (bug 315246).